platform/argocd/foundations/8c156fa7-7444-4edc-b165-5fb84a093989.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc326-qualification-prod
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 8c156fa7-7444-4edc-b165-5fb84a093989
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 0cad340e-9ca7-41a4-915a-803bcb312434
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc326-qualification-prod
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 8c156fa7-7444-4edc-b165-5fb84a093989
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 0cad340e-9ca7-41a4-915a-803bcb312434
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc326-qualification-prod
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 8c156fa7-7444-4edc-b165-5fb84a093989
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 0cad340e-9ca7-41a4-915a-803bcb312434
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
